--- a/w09-project-md21-yul10-diegoac3.Rmd
+++ b/w09-project-md21-yul10-diegoac3.Rmd
@@ -243,8 +243,8 @@ diagnostics_performance = function(model,
     #RMSE
     #RMSE = sqrt(mean(sum(predict_function(predict(model, newdata = startups_te)) - startups_te$aquisition_price_amount)^2))
     
-    #LOOCV
-    RMSE_LOOCV = sqrt(mean((resid(model) / (1 - hatvalues(model))) ^ 2))
+    ##LOOCV
+    #RMSE_LOOCV = sqrt(mean((resid(model) / (1 - hatvalues(model))) ^ 2))
     
     #R squqred
     r_squared = summary(model)$r.squared
@@ -265,7 +265,7 @@ diagnostics_performance = function(model,
     list(p_val_shapiro = p_val_shapiro,
          p_val_bp = p_val_bp,
          #RMSE = RMSE,
-         RMSE_LOOCV = RMSE_LOOCV,
+         #RMSE_LOOCV = RMSE_LOOCV,
          r_squared = r_squared,
          adj_r_squared = adj_r_squared,
          reg_p_value = reg_p_value,
@@ -492,6 +492,20 @@ Although this model optimizes for AIC (it has a lower AIC than the first two-way
 
 - **TRANSFORMATION MODELS**
 
+*Boxcox method*
+
+We explore performing a logarithmic transformation in the response. We start with using the same predictors used in the first 2-way interaction model.
+
+```{r}
+boxcox(interaction_model, plotit = TRUE, lambda = seq(0.1, 0.14, by = 0.01))
+
+#Training the model
+model_transformation_boxcox = lm(aquisition_price_amount^0.12 ~ (. -investment_rounds -state_code)^2 , data = startups_tr)
+
+#Diagnostics and performance of the model
+diagnostics_performance(model_transformation_boxcox)
+
+```
 
 
 ### Moha
