--- a/w09-project-md21-yul10-diegoac3.Rmd
+++ b/w09-project-md21-yul10-diegoac3.Rmd
@@ -465,9 +465,6 @@ model_interaction_selected = step(
 #Diagnostics and performance of the model
 diagnostics_performance(model_interaction_selected)
 
-#Number of predictors with large variance inflation factors
-num_large_variance_inf_factors_AIC = length(faraway::vif(model_interaction_selected)[faraway::vif(model_interaction_selected)>5])
-
 ```
 
 Although this model optimizes for AIC (it has a lower AIC than the first two-way interaction model), this model performs worse in other areas. In particular the both the R squared and adjusted R squared decreased (0.55 and 0.53 respectively). The normality and constant variance assumptions continue to be violated.
@@ -486,21 +483,155 @@ The anova test confirms that the initial model does include predictors that are 
 
 *Boxcox method*
 
-We explore performing a logarithmic transformation in the response. We start with using the same predictors used in the first 2-way interaction model. We use a $\lambda$ value of 0.12.
+We start with using the same predictors used in the first 2-way interaction model. We use a $\lambda$ value of 0.12. Also, we apply a logarithmic transformation in the predictors funding_total_usd and relationships (+1 is added to these predictors because there are records with the value 0 which would lead to issues when applying the log transformation), as this showed an improvement in decreasing adjusted r squared and AIC.
 
 ```{r}
+#Initial model, before transformation
+model_transformation_boxcox_initial = lm(aquisition_price_amount ~ (. -investment_rounds -state_code)^2 + log(funding_total_usd+1) +log(relationships+1) , data = startups_tr)
+
 #Boxcox plot
-boxcox(interaction_model, plotit = TRUE, lambda = seq(0.1, 0.14, by = 0.01))
+boxcox(model_transformation_boxcox_initial, plotit = TRUE, lambda = seq(0.1, 0.14, by = 0.01))
 
 #Training the model
-model_transformation_boxcox = lm(aquisition_price_amount^0.12 ~ (. -investment_rounds -state_code)^2 , data = startups_tr)
+model_transformation_boxcox = lm(aquisition_price_amount^0.12 ~ (. -investment_rounds -state_code)^2 + log(funding_total_usd+1) +log(relationships+1) , data = startups_tr)
 
 #Diagnostics and performance of the model
 diagnostics_performance(model_transformation_boxcox)
 
 ```
 
-Although in this model we are seeing lower r squared and adjusted r squared values than we obtained with the two-way interaction model, now the constant variance assumption has improved (we can see this both in the fitted vs residuals plot, and in the result of the bp test, which provides a p-value of 0.9998168). Normality is still suspect.
+Although in this model we are seeing lower r squared and adjusted r squared values than we obtained with the two-way interaction model, now the constant variance assumption has improved (we can see this both in the fitted vs residuals plot, and in the result of the bp test, which provides a p-value of 0.9997102). Normality is still suspect.
+
+*Forward AIC, using boxcox model as the scope*
+
+We use the previously trained model as the full scope for a forward AIC search.
+
+```{r warning=FALSE}
+#Finding the model
+model_transformation_boxcox_start = lm(aquisition_price_amount ^ 0.12 ~ 1, data = startups_tr)
+model_transformation_boxcox_selected = step(
+  model_transformation_boxcox_start,
+  scope =
+    aquisition_price_amount ^ 0.12 ~ category_code * funding_rounds + category_code * milestones +
+    category_code * aquisition_price_amount + category_code * top50pct + category_code *
+    istop26_50 + category_code * country_code + category_code * city + category_code *
+    invested_companies + category_code * funding_total_usd + category_code *
+    relationships + category_code * top25pct + category_code * istop25 + category_code *
+    name_length + funding_rounds * milestones + funding_rounds * aquisition_price_amount +
+    funding_rounds * top50pct + funding_rounds * istop26_50 + funding_rounds *
+    country_code + funding_rounds * city + funding_rounds * invested_companies +
+    funding_rounds * funding_total_usd + funding_rounds * relationships + funding_rounds *
+    top25pct + funding_rounds * istop25 + funding_rounds * name_length + milestones *
+    aquisition_price_amount + milestones * top50pct + milestones * istop26_50 +
+    milestones * country_code + milestones * city + milestones * invested_companies +
+    milestones * funding_total_usd + milestones * relationships + milestones *
+    top25pct + milestones * istop25 + milestones * name_length + aquisition_price_amount *
+    top50pct + aquisition_price_amount * istop26_50 + aquisition_price_amount *
+    country_code + aquisition_price_amount * city + aquisition_price_amount *
+    invested_companies + aquisition_price_amount * funding_total_usd + aquisition_price_amount *
+    relationships + aquisition_price_amount * top25pct + aquisition_price_amount *
+    istop25 + aquisition_price_amount * name_length + top50pct * istop26_50 +
+    top50pct * country_code + top50pct * city + top50pct * invested_companies +
+    top50pct * funding_total_usd + top50pct * relationships + top50pct * top25pct +
+    top50pct * istop25 + top50pct * name_length + istop26_50 * country_code +
+    istop26_50 * city + istop26_50 * invested_companies + istop26_50 * funding_total_usd +
+    istop26_50 * relationships + istop26_50 * top25pct + istop26_50 * istop25 +
+    istop26_50 * name_length + country_code * city + country_code * invested_companies +
+    country_code * funding_total_usd + country_code * relationships + country_code *
+    top25pct + country_code * istop25 + country_code * name_length + city *
+    invested_companies + city * funding_total_usd + city * relationships + city *
+    top25pct + city * istop25 + city * name_length + invested_companies * funding_total_usd +
+    invested_companies * relationships + invested_companies * top25pct + invested_companies *
+    istop25 + invested_companies * name_length + funding_total_usd * relationships +
+    funding_total_usd * top25pct + funding_total_usd * istop25 + funding_total_usd *
+    name_length + relationships * top25pct + relationships * istop25 + relationships *
+    name_length + top25pct * istop25 + top25pct * name_length + istop25 * name_length +
+    log(funding_total_usd + 1) + log(relationships + 1),
+  direction = "forward",
+  trace = 0
+)
+
+#Diagnostics and performance of the model
+diagnostics_performance(model_transformation_boxcox_selected)
+
+#Number of predictors
+length(coef(model_transformation_boxcox_selected))
+
+```
+
+The model shows a significant improvement in performance (adjusted r squared, AIC, BIC) but the constant variance assumption is violated again. For this reason, we still prefer the original boxcox model `model_transformation_boxcox`.
+
+*Logarithmic transformation in response*
+
+We also explore using a logarithmic transformation in the response variable, using the same predictors originally used for the first model fitted with the boxcox method above.
+
+```{r}
+#Training the model
+model_transformation_log = lm(log(aquisition_price_amount) ~ (. -investment_rounds -state_code)^2 + log(funding_total_usd+1) +log(relationships+1) , data = startups_tr)
+
+#Diagnostics and performance of the model
+diagnostics_performance(model_transformation_log)
+```
+
+In R squared and in predicted R squared this model performs marginally worse than the boxcox model. However, in AIC and in BIC, this model shows a more significant drop in performance (drop from 3274 to 3931 in AIC and from 7070 to 7727 in BIC).
+
+*Forward AIC, using lorarigthmic model as the scope*
+
+We also use the previously trained log model as the full scope for a forward AIC search.
+
+```{r}
+#Finding the model
+model_transformation_log_start = lm(log(aquisition_price_amount) ~ 1, data = startups_tr)
+model_transformation_log_selected = step(
+  model_transformation_log_start,
+  scope =
+    log(aquisition_price_amount) ~ category_code * funding_rounds + category_code * milestones +
+    category_code * aquisition_price_amount + category_code * top50pct + category_code *
+    istop26_50 + category_code * country_code + category_code * city + category_code *
+    invested_companies + category_code * funding_total_usd + category_code *
+    relationships + category_code * top25pct + category_code * istop25 + category_code *
+    name_length + funding_rounds * milestones + funding_rounds * aquisition_price_amount +
+    funding_rounds * top50pct + funding_rounds * istop26_50 + funding_rounds *
+    country_code + funding_rounds * city + funding_rounds * invested_companies +
+    funding_rounds * funding_total_usd + funding_rounds * relationships + funding_rounds *
+    top25pct + funding_rounds * istop25 + funding_rounds * name_length + milestones *
+    aquisition_price_amount + milestones * top50pct + milestones * istop26_50 +
+    milestones * country_code + milestones * city + milestones * invested_companies +
+    milestones * funding_total_usd + milestones * relationships + milestones *
+    top25pct + milestones * istop25 + milestones * name_length + aquisition_price_amount *
+    top50pct + aquisition_price_amount * istop26_50 + aquisition_price_amount *
+    country_code + aquisition_price_amount * city + aquisition_price_amount *
+    invested_companies + aquisition_price_amount * funding_total_usd + aquisition_price_amount *
+    relationships + aquisition_price_amount * top25pct + aquisition_price_amount *
+    istop25 + aquisition_price_amount * name_length + top50pct * istop26_50 +
+    top50pct * country_code + top50pct * city + top50pct * invested_companies +
+    top50pct * funding_total_usd + top50pct * relationships + top50pct * top25pct +
+    top50pct * istop25 + top50pct * name_length + istop26_50 * country_code +
+    istop26_50 * city + istop26_50 * invested_companies + istop26_50 * funding_total_usd +
+    istop26_50 * relationships + istop26_50 * top25pct + istop26_50 * istop25 +
+    istop26_50 * name_length + country_code * city + country_code * invested_companies +
+    country_code * funding_total_usd + country_code * relationships + country_code *
+    top25pct + country_code * istop25 + country_code * name_length + city *
+    invested_companies + city * funding_total_usd + city * relationships + city *
+    top25pct + city * istop25 + city * name_length + invested_companies * funding_total_usd +
+    invested_companies * relationships + invested_companies * top25pct + invested_companies *
+    istop25 + invested_companies * name_length + funding_total_usd * relationships +
+    funding_total_usd * top25pct + funding_total_usd * istop25 + funding_total_usd *
+    name_length + relationships * top25pct + relationships * istop25 + relationships *
+    name_length + top25pct * istop25 + top25pct * name_length + istop25 * name_length +
+    log(funding_total_usd + 1) + log(relationships + 1),
+  direction = "forward",
+  trace = 0
+)
+
+#Diagnostics and performance of the model
+diagnostics_performance(model_transformation_log_selected)
+
+#Number of predictors
+length(coef(model_transformation_log_selected))
+```
+
+Although
 
 ### Moha
 
